[gd_scene load_steps=15 format=2]

[ext_resource path="res://Script/game_menu.gd" type="Script" id=1]
[ext_resource path="res://Script/modes.gd" type="Script" id=2]
[ext_resource path="res://fonts/Gugi-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Script/StartMenu.gd" type="Script" id=4]
[ext_resource path="res://Script/difficulty.gd" type="Script" id=5]
[ext_resource path="res://Script/menu_buttons.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 50
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = ExtResource( 3 )

[node name="game_interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = 2.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = -4.0
margin_right = 959.0
margin_bottom = 1277.0

[node name="menu_buttons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )

[node name="guns" type="Node2D" parent="menu_buttons"]
position = Vector2( 700, 0 )
script = ExtResource( 5 )

[node name="vbox" type="VBoxContainer" parent="menu_buttons/guns"]
margin_top = 400.0
margin_right = 987.0
margin_bottom = 931.0
rect_min_size = Vector2( 0, 531 )
alignment = 1

[node name="glock" type="Button" parent="menu_buttons/guns/vbox"]
margin_top = 145.0
margin_right = 987.0
margin_bottom = 202.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Glock"
flat = true

[node name="calibre45" type="Button" parent="menu_buttons/guns/vbox"]
margin_top = 206.0
margin_right = 987.0
margin_bottom = 263.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Calibre 45"
flat = true

[node name="m16_rifle" type="Button" parent="menu_buttons/guns/vbox"]
margin_top = 267.0
margin_right = 987.0
margin_bottom = 324.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "M16 Rifle"
flat = true

[node name="back" type="Button" parent="menu_buttons/guns/vbox"]
margin_top = 328.0
margin_right = 987.0
margin_bottom = 385.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Back"
flat = true

[node name="move_tween" type="Tween" parent="menu_buttons/guns"]

[node name="start" type="Node2D" parent="menu_buttons"]
script = ExtResource( 4 )

[node name="vbox" type="VBoxContainer" parent="menu_buttons/start"]
margin_top = 400.0
margin_right = 959.0
margin_bottom = 931.0
alignment = 1

[node name="start" type="Button" parent="menu_buttons/start/vbox"]
margin_top = 206.0
margin_right = 959.0
margin_bottom = 263.0
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Start Game"
flat = true

[node name="quit" type="Button" parent="menu_buttons/start/vbox"]
margin_top = 267.0
margin_right = 959.0
margin_bottom = 324.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Quit"
flat = true

[node name="move_tween" type="Tween" parent="menu_buttons/start"]

[node name="modes" type="Node2D" parent="menu_buttons"]
script = ExtResource( 2 )

[node name="vbox" type="VBoxContainer" parent="menu_buttons/modes"]
margin_left = 1347.0
margin_top = 400.0
margin_right = 2304.0
margin_bottom = 985.0
alignment = 1

[node name="disassemble" type="Button" parent="menu_buttons/modes/vbox"]
margin_top = 203.0
margin_right = 957.0
margin_bottom = 260.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Disassemble"
flat = true

[node name="assemble" type="Button" parent="menu_buttons/modes/vbox"]
margin_top = 264.0
margin_right = 957.0
margin_bottom = 321.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Assemble"
flat = true

[node name="back_to_difficulty" type="Button" parent="menu_buttons/modes/vbox"]
margin_top = 325.0
margin_right = 957.0
margin_bottom = 382.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Back"
flat = true

[node name="move_tween" type="Tween" parent="menu_buttons/modes"]

[connection signal="pressed" from="menu_buttons/guns/vbox/glock" to="menu_buttons" method="_on_glock_pressed"]
[connection signal="pressed" from="menu_buttons/guns/vbox/back" to="menu_buttons" method="_on_back_pressed"]
[connection signal="pressed" from="menu_buttons/start/vbox/start" to="menu_buttons" method="_on_start_pressed"]
[connection signal="pressed" from="menu_buttons/start/vbox/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="menu_buttons/modes/vbox/disassemble" to="." method="_on_disassemble_pressed"]
[connection signal="pressed" from="menu_buttons/modes/vbox/disassemble" to="menu_buttons" method="_on_disassemble_pressed"]
[connection signal="pressed" from="menu_buttons/modes/vbox/back_to_difficulty" to="menu_buttons" method="_on_back_to_difficulty_pressed"]
